Add users add feature

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY=oeii(az7ltnrhqel4fay=xn%!jqcz3qakg@v+earxztpi)d+^u
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
